<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.p4p.backpocketdriver.driverlog.activities.RegisterUserActivity"
    android:background="@color/background_blue">

    <TextView
        android:id="@+id/main_heading_register"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading_size"
        android:gravity="center_horizontal"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="30dp"
                android:hint="@string/first_name_hint"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:hint="@string/last_name_hint"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <EditText
                android:id="@+id/register_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/register_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_again_hint"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="left"/>

            <Button
                android:id="@+id/register_user_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_name"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:background="@color/button_blue"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
