<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.p4p.backpocketdriver.driverlog.activities.DriverMenuActivity"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="-70dp"
            android:src="@drawable/bmw"/>

        <Button
            android:id="@+id/log_book_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_book_button"
            android:textStyle="bold"
            android:layout_marginTop="-70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@color/button_blue"
            android:onClick="openLogBook"/>

        <Button
            android:id="@+id/driving_stats_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driving_stats_button"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@color/button_blue"
            android:onClick="openDrivingStats"/>


        <Button
            android:id="@+id/logout_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@color/button_blue"
            android:onClick="logout"/>
    </LinearLayout>
</ScrollView>